Fix highlight text wrapping issue

--- a/client/components/app/copy/_main.scss
+++ b/client/components/app/copy/_main.scss
@@ -18,6 +18,7 @@ section {
     -moz-font-feature-settings: 'tnum';
     font-feature-settings: 'tnum';
     transition: all 600ms;
+    display: inline-block;
 
     &:before {
       content: '';
